Implement responsive designs

--- a/src/css/Restaurant.css
+++ b/src/css/Restaurant.css
@@ -26,7 +26,8 @@
 
 .restaurant .description .res-info {
   display: flex;
-  column-gap: 5px;
+  gap: 5px;
+  flex-flow: row wrap;
 }
 
 .res-rating {
