--- a/src/css/Category.css
+++ b/src/css/Category.css
@@ -3,7 +3,6 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  border: 1px solid #ffc700;
-  border-radius: 10px;
+  flex-flow: row wrap;
   overflow: hidden;
 }
