--- a/src/css/CategoryItem.css
+++ b/src/css/CategoryItem.css
@@ -15,9 +15,16 @@
 }
 
 .category-item {
-  border-right: 1px solid #ffc700;
+  border: 1px solid #ffc700;
+  overflow: hidden;
+}
+
+.category-item:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .category-item:last-child {
-  border-right: none;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
