--- a/src/css/RestaurantList.css
+++ b/src/css/RestaurantList.css
@@ -21,3 +21,15 @@
 .show-more button:hover {
   background-color: #ffc700;
 }
+
+@media only screen and (max-width: 41.75em) /* 668px */ {
+  .res-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 25.938em) /* 415px */ {
+  .res-list {
+    grid-template-columns: 1fr;
+  }
+}
